Changes in version 1.15.1
    * changes to the API
    * simplifications of some functions
    * performance improvements
    * usage of RCPP for further performance improvements
    * addition of tests

Changes in version 1.13.11 (2018-10-25)
    * implementation of further tests

Changes in version 1.13.10 (2018-10-24)
    * test for the gdepoch function
    * simplification of code
    * performance improvements

Changes in version 1.13.9 (2018-10-23)
    * test for the loss function
    * some simplifications

Changes in version 1.13.8 (2018-10-22)
    * first implementation of tests with testthat
    * simplifications of the code

Changes in version 1.13.7 (2018-10-10)
    * small bugfix

Changes in version 1.13.6 (2018-10-05)
    * some minor issues with the calculation of p-values are fixed

Changes in version 1.13.5 (2018-10-04)
    * checks for the validity of inputs added
    * some performance improvements

Changes in version 1.13.4 (2018-10-02)
    * major performance improvement

Changes in version 1.13.3 (2018-09-28)
    * usage of data.table for various functions for performance improvement
    * simplification of the source code

Changes in version 1.13.2 (2018-09-27)
    * bug fixed that, where p-values couldn't be calculated for a gene with only
    missing values in a batch (#1)

Changes in version 1.13.1 (2018-09-25)
    * BEclear uses now BiocParallel instead of snowfall for parallelisation
    * roxygen2 is now used for the generating the documentation
    * major code refactoring
    * some minor bug fixes 
    * performance improvements