@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(calcBatchEffects)
 export(calcMedians)
 export(calcPvalues)
 export(calcScore)
