@@ -1,19 +1,30 @@
-#' calcPvalues
+#' calcBatchEffects
 #' 
-#' @aliases calcPvalues
+#' @aliases calcBatchEffects
 #' 
-#' @title Calculate p-values
+#' @title Calculate the Batch Effects in a given data set
 #' 
 #' @seealso \code{\link{ks.test}}
 #' @seealso \code{\link{p.adjust}}
 #' @seealso \code{\link{correctBatchEffect}}
 #' 
-#' @description Compares the distribution of all beta values corresponding to 
+#' @description Calculates for each gene in every batch the median distance to the other
+#' batches and the p-value resulting from the Kolmogorov-Smirnov test.
+#' 
+#' @details 
+#' \enumerate{
+#' \item{medians}
+#' Compares the median value of all beta values belonging to one 
+#' batch with the median value of all beta values belonging to all other 
+#' batches. Returns a matrix containing this median difference value for every 
+#' gene in every batch, columns define the batch numbers, rows the gene names.
+#' \item{p-values}
+#' Compares the distribution of all beta values corresponding to 
 #' one batch with the distribution of all beta values corresponding to all 
 #' other batches and returns a p-value which defines if the distributions are 
 #' the same or not. Standard two sided Kolmogorov-Smirnov test is used to 
 #' calculate the (adjusted) p-values.
-#' 
+#' }
 #' 
 #' @param data a \code{\link[data.table]{data.table}} with one column indicating
 #' the sample, one the features and a value column indicating the beta value
@@ -30,19 +41,15 @@
 #' \code{\link[BiocParallel]{BiocParallelParam-class}} that determines how to
 #' parallelisation of the functions will be evaluated.
 #' 
-#' @export calcPvalues
+#' @export calcBatchEffects
 #' @import futile.logger
 #' @import data.table
 #' @importFrom stats p.adjust
 #' @importFrom methods is
-#' @usage calcPvalues(data, samples, adjusted=TRUE, method="fdr", 
+#' @usage calcBatchEffects(data, samples, adjusted=TRUE, method="fdr", 
 #' BPPARAM=bpparam())
 #' 
-#' @return a matrix containing p-values for all genes in all batches, the 
-#' column names define the batch numbers, row names are the same gene names as 
-#' contained in the input matrix. If there are only missing values present for
-#' a gene in a batch, a p-values of 0 is returned
-#' 
+#' @return a matrix containing medians and p-values for all genes in all batches
 #' @examples 
 #' ## Shortly running example. For a more realistic example that takes 
 #' ## some more time, run the same procedure with the full BEclearData
@@ -54,38 +61,43 @@
 #' ex.samples <- ex.samples[7:26,]
 #'  
 #' 
-#' pvals <- calcPvalues(data=ex.data, samples=ex.samples,method="fdr")
+#' res <- calcBatchEffects(data=ex.data, samples=ex.samples,method="fdr")
 
-calcPvalues <- function(data, samples, adjusted=TRUE, method="fdr", 
+calcBatchEffects <- function(data, samples, adjusted=TRUE, method="fdr", 
                         BPPARAM=bpparam()) {
-    .Deprecated("calcBatchEffects")
     
     if(!is(data, "data.table")){
         flog.info("Transforming matrix to data.table")
         data <- data.table(feature=as.character(rownames(data)), data)
         data <- melt(data = data, id.vars = "feature", variable.name = "sample", 
-                   value.name = "beta.value", variable.factor = FALSE)
+                     value.name = "beta.value", variable.factor = FALSE)
         setkey(data, "feature", "sample")
     }
     
     if(!is(samples, "data.table")){
         samples <- data.table(samples)
     }
-
-    flog.info(paste("Calculating the p-values for", samples[,uniqueN(batch_id)] 
+    
+    flog.info(paste("Calculating the batch effects for", samples[,uniqueN(batch_id)] 
                     , "batches"))
     
-    pvalues <- lapply(samples[,unique(batch_id)], calcPvalsForBatch,
-                       samples = samples, data = data, BPPARAM=BPPARAM)
+    batchEffects <- lapply(samples[,unique(batch_id)], calcBatchEffectsForBatch,
+                      samples = samples, data = data, BPPARAM=BPPARAM)
     
-    flog.debug(paste("Binding", length(pvalues), "rows of p-values together"))
-    pvalues <- do.call(cbind, pvalues)
+    flog.debug(paste("Binding", length(pvalues), "columns of batch_effects together"))
+    batchEffects <- do.call(cbind, batchEffects)
     
-    ## pvalue adjustment
+    med <- batchEffects[colnames(batchEffects) == "medians"]
+    colnames(med) <- samples[,unique(batch_id)]
+    
+    pvalues <- batchEffects[colnames(batchEffects) == "p_values"]
+    colnames(pvalues) <- samples[,unique(batch_id)]
+    
+    # pvalue adjustment
     if (adjusted == TRUE) {
-        flog.info("Adjusting p-values")
-        pvalues <- t(apply(pvalues, 1, p.adjust, method=method))
+       flog.info("Adjusting p-values")
+       pvalues <- t(apply(pvalues, 1, p.adjust, method=method))
     }
     
-    return(pvalues)
+    return(list(med=med, pval=pvalues))
 }
